# kalshi

./: .env.example  .gitignore  CODEX_PROMPT_KALSHI_MARKET_DISCOVERY.md  README.md  kalshi.db  pyproject.toml  render.yaml  requirements.txt
configs/: example.yaml
docs/: CONCEPTS_EDGE_CALC.md  IRONVALE_AUTO_DEPLOYMENT_PIPELINE.md  IRONVALE_CAPITAL_RAISE_PLAYBOOK.md  IRONVALE_PROP_DESK_OPERATING_MANUAL.md  OPERATING_RULES.md
kalshi_bot/: __init__.py  alerts.py  audit.py  auth.py  cli.py  config.py  data_rest.py  data_ws.py  decision_report.py  edge_scorer.py  ev.py  execution.py  execution_manager.py  features.py  fee_model.py  flow_features.py  kalshi_features.py  ledger.py  living_files.py  market_picker.py  market_scanner.py  market_selector.py  order_lifecycle.py  orderbook_live.py  portfolio.py  rate_limit.py  risk.py  spread_scanner.py  watchlist.py  watchlist_server.py
kalshi_bot/adapters/: balldontlie.py  coingecko.py  (+6 more)
kalshi_decision_engine.egg-info/: SOURCES.txt  requires.txt
kalshi_engine/: README.md  __init__.py  backfill.py  bet_sizer.py  btc_regime.py  capacity_model.py  capital_board.py  ev_forecast.py  feature_builder.py  features.py  institutional_report.py  internal_arb.py  kalshi_rest.py  kalshi_ws.py  layer_backtest.py  model_binary.py  models.py  monte_carlo_bayes.py  pipeline.py  rl_optimizer.py  shadow_simulator.py  sharpe_layer.py  sports_bayes.py  storage.py
scripts/: render_start.sh  stream_features.py
tests/: test_integration_mock.py  test_ledger.py  test_rate_limit.py  test_risk.py
vol_engine/: __init__.py  ewma.py  garch_model.py
(+51 files in other folders)
